app/aspnetapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 815919245801.dkr.ecr.eu-west-2.amazonaws.com/widebot-task:aspnet-mssql-web
          ports:
            - containerPort: 80

       
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec: 
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
