app/aspnetapp/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: external
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  web-service
            port:
              number: 80
